# UltrasoundWatermarkApp

./: .gitattributes  .gitignore  .gitmodules  settings.gradle.kts  test_release_keys
app/: build.gradle.kts
app/src/androidTest/java/com/csr460/ultrasoundwatermark/: ExampleInstrumentedTest.kt  UltrasoundWatermarkJniTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  UltrasoundWatermarkJNI.cpp  WatermarkCallee.cpp  WatermarkCallee.hpp  WatermarkCaller.cpp  WatermarkCaller.hpp
app/src/main/cpp/oboe/: OboeLoopPlayer.hpp  OboePlayerBase.hpp  OboeRecorder.hpp  OboeStreamAdapter.hpp  OboeStreamConsumerPlayer.hpp
app/src/main/java/com/csr460/ultrasoundwatermark/: MainActivity.kt  WatermarkCallee.kt  WatermarkCaller.kt  WatermarkNativeException.kt
app/src/main/java/com/csr460/ultrasoundwatermark/ui/: CalleeScreen.kt  CallerScreen.kt  MainViewModel.kt
app/src/main/java/com/csr460/ultrasoundwatermark/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/raw/: detector_bin  detector_param  generator_bin  generator_param
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/csr460/ultrasoundwatermark/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
